fix the text align in forms

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -41,10 +41,6 @@
     z-index: 10;
 }
 
-input{
-    text-align: right;
-}
-
 #field{
     text-align: right;
 }
